<resources>
    <string name="app_name">E-KUH</string>
    <string name="login_title">Log In</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="footer_login">Sistem Administrasi Kantor &amp; Laporan Kinerja Pegawai</string>
    <string name="login_title_label">KANTOR URUSAN HAJI \nKONSULAT JENDERAL REPUBLIK INDONESIA \nJEDDAH - ARAB SAUDI</string>
    <string name="title_activity_absensi_maps">Map</string>
    <string name="title_activity_maps_absensi">Map</string>
    <string-array name="lokasi_absensi">
        <item>Kantor 1</item>
        <item>Kantor 2</item>
        <item>Kantor 3</item>
    </string-array>
    <string-array name="satuan">
        <item>Surat</item>
        <item>Dokumen</item>
        <item>Berkas</item>
        <item>Lembar</item>
        <item>Kegiatan</item>
    </string-array>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_beranda">Beranda</string>
    <string name="menu">Menu</string>

    <string name="menu_p_lembur">Lembur</string>
    <string name="menu_p_dinas">Dinas</string>
    <string name="menu_p_cuti">Cuti</string>
    <string name="menu_peminjaman_mobil">Peminjaman Mobil</string>
    <string name="menu_pengembalian_mobil">Pengembalian Mobil</string>
    <string name="menu_kinerja">Kinerja</string>
    <string name="menu_laporan">Laporan Kinerja</string>
    <string name="menu_absensi">Presensi Kehadiran</string>
    <string name="logout">Logout</string>
</resources>
