<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/haji2"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack"
                    android:gravity="left"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/garuda"
                        android:layout_marginLeft="8dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_title_label"
                        android:textColor="@color/colorWhiteText"
                        android:layout_marginLeft="8dp"/>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingHorizontal="30dp"
                android:layout_marginTop="2dp"
                android:animateLayoutChanges="true"
                android:animationCache="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textSize="22sp"
                    android:textColor="@color/colorText"
                    android:gravity="center"/>
                <LinearLayout
                    android:id="@+id/linear_input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@id/input_edit_password"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:imeOptions="actionDone"/>

                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="Login"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_progress_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"/>
                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Harap tunggu sebentar..."
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_login"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="10dp"/>

</RelativeLayout>